--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -22,18 +22,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_photo"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_photo"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_photo"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_main_category_photo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_photo"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_photo"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_photo_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
@@ -49,18 +67,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_video"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_video"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_video"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_main_category_video"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_video"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_video"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_video_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
@@ -75,18 +111,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_app"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_app"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_apps"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_main_category_app"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_app"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_apps"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_app_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
@@ -108,18 +162,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_music"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_music"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_music"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_main_category_music"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_music"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_music"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_music_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
@@ -135,18 +207,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_doc"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_doc"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_doc"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_main_category_doc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_doc"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_doc"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_doc_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
@@ -161,21 +251,37 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_zip"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_zip"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_zip"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/tv_main_category_zip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_zip"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_zip"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_zip_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
         </FrameLayout>
-
     </LinearLayout>
 
     <LinearLayout
@@ -194,18 +300,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_download"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_download"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_download"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_main_category_download"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_download"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_download"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_download_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
@@ -221,19 +345,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_recent"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_recent"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_recent"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/tv_main_category_recent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_recent"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_recent"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_recent_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
         </FrameLayout>
 
         <View
@@ -247,18 +388,36 @@
             android:layout_weight="1"
             android:background="@drawable/bg_main_category_item">
 
-            <TextView
-                android:id="@+id/tv_main_category_ad"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:drawablePadding="9dp"
-                android:drawableTop="@drawable/ic_main_category_ad"
-                android:textColor="#B2000000"
-                android:textStyle="bold"
-                android:textSize="12dp"
-                android:text="@string/main_category_item_ad"/>
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_main_category_ad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:drawablePadding="3dp"
+                    android:drawableTop="@drawable/ic_main_category_ad"
+                    android:textColor="@color/black_70"
+                    android:textStyle="bold"
+                    android:textSize="12dp"
+                    android:text="@string/main_category_item_ad"/>
+
+                <TextView
+                    android:id="@+id/tv_main_category_ad_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:textColor="@color/black_40"
+                    android:textSize="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
@@ -269,7 +428,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="6dp"
         android:background="@color/white"
         android:orientation="vertical">
 
@@ -288,7 +447,7 @@
                 android:gravity="center_vertical"
                 android:drawableLeft="@drawable/ic_main_phone"
                 android:drawableStart="@drawable/ic_main_phone"
-                android:textColor="#B2000000"
+                android:textColor="@color/black_70"
                 android:textSize="10dp"
                 android:text="@string/main_info_phone_storage"/>
 
@@ -444,7 +603,7 @@
     <TextView
         android:id="@+id/tv_main_category_clear_trash"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="50dp"
         android:layout_marginTop="9dp"
         android:layout_marginBottom="7dp"
         android:layout_marginLeft="9dp"
