--- a/app/src/main/res/layout/dialog_zip_file_detail.xml
+++ b/app/src/main/res/layout/dialog_zip_file_detail.xml
@@ -30,9 +30,11 @@
 
         <TextView
             android:id="@+id/btn_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="14dp"
             android:gravity="center_vertical"
@@ -42,9 +44,11 @@
 
         <TextView
             android:id="@+id/btn_extract"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginStart="24dp"
             android:gravity="center_vertical"
             android:text="@string/extract"
@@ -53,9 +57,11 @@
 
         <TextView
             android:id="@+id/btn_cancel"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginStart="24dp"
             android:gravity="center_vertical"
             android:text="@string/common_cancel"
