--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -75,7 +75,7 @@
                 app:tabTextColor="@color/main_tab_text_color_normal"
                 app:tabIndicatorHeight="2dp"
                 app:tabIndicatorColor="@color/main_tab_indicator"
-                app:tabBackground="@color/white" />
+                app:tabBackground="@drawable/bg_main_tab_selector" />
 
         </android.support.v4.view.ViewPager>
 
