--- a/app/src/main/res/layout/activity_txt_preview.xml
+++ b/app/src/main/res/layout/activity_txt_preview.xml
@@ -9,6 +9,7 @@
     <include layout="@layout/common_action_bar_without_search"/>
 
     <ScrollView
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,4 +21,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </ScrollView>
+
+    <android.support.v7.widget.RecyclerView
+        android:visibility="gone"
+        android:id="@+id/rv_txt_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
