--- a/app/src/main/res/layout/item_main_storage_grid_style.xml
+++ b/app/src/main/res/layout/item_main_storage_grid_style.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp">
 
         <ImageView
             android:id="@+id/iv_main_storage_style_grid_item_icon"
@@ -38,8 +40,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|top"
         android:paddingTop="8dp"
-        android:paddingRight="8dp"
-        android:paddingEnd="8dp"
+        android:paddingRight="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
         android:paddingLeft="0dp"
         android:paddingStart="0dp"
         android:src="@drawable/main_storage_style_list_item_check_box_selector"/>
