--- a/app/src/main/res/layout/main_drawer.xml
+++ b/app/src/main/res/layout/main_drawer.xml
@@ -22,9 +22,10 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="43dp"
+            android:layout_height="44.67dp"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
+            android:paddingTop="16dp"
             android:gravity="center_vertical"
             android:textColor="#999999"
             android:textSize="@dimen/h5_12"
@@ -34,30 +35,30 @@
         <TextView
             android:id="@+id/tv_drawer_app_locker"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_app_locker"
             android:drawableStart="@drawable/ic_drawer_app_locker"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:text="@string/drawer_app_locker"/>
 
         <TextView
             android:id="@+id/tv_drawer_smart_charge"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_height="34dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_smart_charge"
             android:drawableStart="@drawable/ic_drawer_smart_charge"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:visibility="gone"
             android:text="@string/drawer_smart_charge"/>
@@ -69,9 +70,10 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="43dp"
+            android:layout_height="44.67dp"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
+            android:paddingTop="16dp"
             android:gravity="center_vertical"
             android:textColor="#999999"
             android:textSize="@dimen/h5_12"
@@ -81,9 +83,9 @@
         <TextView
             android:id="@+id/tv_drawer_usb_plugin"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_usb"
             android:drawableStart="@drawable/ic_drawer_usb"
@@ -91,16 +93,16 @@
             android:drawableEnd="@drawable/drawer_setting_switcher_selector"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:text="@string/drawer_usb_plugin_message"/>
 
         <TextView
             android:id="@+id/tv_drawer_low_space"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_low_space"
             android:drawableStart="@drawable/ic_drawer_low_space"
@@ -108,7 +110,7 @@
             android:drawableEnd="@drawable/drawer_setting_switcher_selector"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:text="@string/drawer_low_space_warning"/>
 
@@ -116,9 +118,9 @@
         <TextView
             android:id="@+id/tv_drawer_logger_notification"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginRight="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_logger"
             android:drawableStart="@drawable/ic_drawer_logger"
@@ -126,7 +128,7 @@
             android:drawableEnd="@drawable/drawer_setting_switcher_selector"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:text="@string/drawer_logger_notification"/>
 
@@ -140,6 +142,7 @@
             android:layout_height="43dp"
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
+            android:paddingTop="16dp"
             android:gravity="center_vertical"
             android:textColor="#999999"
             android:textSize="@dimen/h5_12"
@@ -149,30 +152,30 @@
         <TextView
             android:id="@+id/tv_drawer_rating"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_rating"
             android:drawableStart="@drawable/ic_drawer_rating"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:text="@string/drawer_rating"/>
 
         <TextView
             android:id="@+id/tv_drawer_update"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_update"
             android:drawableStart="@drawable/ic_drawer_update"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:visibility="gone"
             android:text="@string/drawer_update"/>
@@ -180,30 +183,30 @@
         <TextView
             android:id="@+id/tv_drawer_help"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_help"
             android:drawableStart="@drawable/ic_drawer_help"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:text="@string/drawer_help"/>
 
         <TextView
             android:id="@+id/tv_drawer_about"
             android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_about"
             android:drawableStart="@drawable/ic_drawer_about"
             android:drawablePadding="15dp"
             android:textColor="#4c4c4c"
-            android:textSize="@dimen/h5_12"
+            android:textSize="@dimen/h4_14"
             android:textStyle="bold"
             android:text="@string/drawer_about"/>
 
